--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "rawg-client",
   "version": "0.1.0",
-  "homepage": "https://huynh12345678.github.io/Game",
   "main": "index.js",
   "private": true,
   "dependencies": {
@@ -14,7 +13,7 @@
     "firebase": "^7.14.5",
     "formik": "^2.1.4",
     "gh-pages": "^3.0.0",
-    "node-sass": "^4.14.0",
+    "node-sass": "npm:sass@^1.60.0",
     "path-to-regexp": "^6.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
